--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "mysql2": "^3.6.0",
     "sequelize": "^6.32.1"
   },
   "devDependencies": {
